# crude-59

./: .gitignore  LICENSE.md  README.md
firmware/: CMakeLists.txt
firmware/src/: keyboard.c  keyboard.h  layout.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
kicad/keyboard/: keyboard.kicad_pcb  keyboard.kicad_sch
openscad/: case.scad  keycap.scad
